--- a/package.json
+++ b/package.json
@@ -3,37 +3,75 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-spring/web": "^9.7.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.22.2",
+    "antd": "^5.23.2",
     "aos": "^2.3.4",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "helmet": "^8.0.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.6",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "react-snap": "^1.23.0",
+    "react-toastify": "^11.0.3",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
+  },
+  "reactSnap": {
+    "source": "build",
+    "include": [
+      "/",
+      "/try-for-free/",
+      "/request-demo/",
+      "/career/",
+      "/about/",
+      "/contact/",
+      "/whatsapp-api/",
+      "/rcs-sms/",
+      "/bulk-sms/",
+      "/voice-call/",
+      "/privacy/",
+      "/terms/",
+      "/services/",
+      "/faq/",
+      "/blogs/",
+      "/blogs/how-whatsApp-chatbots-can-revolutionize-customer-support-for-indian-sMEs/",
+      "/blogs/what-is-whatsApp-business-aPI?-a-complete-guide-for-indian-businesses/",
+      "/blogs/how-to-use-whatsApp-business-aPI-to-automate-customer-communication/",
+      "/blogs/whatsApp-business-aPI-pricing-in-india-everything-you-need-to-know/",
+      "/blogs/top-10-benefits-of-whatsApp-chatbots-for-small-businesses-in-bangalore/",
+      "/blogs/step-by-step-guide-to-integrating-whatsApp-business-aPI-with-your-cRM/",
+      "/blogs/whatsApp-business-aPI-vs-free-whatsApp-business-app-which-one-is-right-for-you/",
+      "/blogs/10-game-changing-marketing-strategies-with-whatsApp-business-aPI/",
+      "/blogs/how-bangalore's-small-businesses-are-unlocking-growth-with-whatsApp-business-aPI/",
+      "/blogs/whatsApp-business-aPI-integration-essential-tools-and-platforms-for-small-business-growth/",
+      "/blogs/why-whatsApp-business-aPI-is-revolutionizing-e-commerce-in-india/",
+      "/blogs/whatsApp-business-aPI-use-cases-transforming-healthcare-in-india/",
+      "/blogs/top-5-chatbot-platforms-for-whatsApp-business-aPI-developers/",
+      "/blogs/how-whatsApp-chatbots-drive-lead-generation-for-indian-startups/",
+      "/blogs/building-scalable-customer-support-with-whatsApp-aPI-and-chatbots-in-bangalore/",
+      "/blogs/why-travel-businesses-in-2024-need-whatsApp-aPI-for-growth/",
+      "/blogs/secure-your-business-with-a2z-sms-otp-services/",
+      "/blogs/boost-business-reach-with-reliable-bulk-sMS-services/",
+      "/privacypolicies/",
+      "/termsandcondition/"
+    ]
   },
   "eslintConfig": {
     "extends": [
